--- a/siteFiles/css/timeManagment.css
+++ b/siteFiles/css/timeManagment.css
@@ -17,6 +17,7 @@
   text-align: center;
   border: black;
   border-style: double;
+  font-size: x-large;
 }
 
 .timeManagmentDescription {
